<resources>
    <string name="app_name">智能室分</string>

    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="navigation_history">巡检历史</string>
    <string name="navigation_data">训练数据</string>
    <string name="navigation_setting">系统设置</string>
    <string name="navigation_info">关于系统</string>
    <string name="navigation_contact">联系我们</string>
    <string name="navigation_other">其它</string>
    <string name="navigation_share">分享</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="speedtest">是否开启测速</string>
    <string name="inspect">巡检</string>
    <string name="setting">设置</string>
    <string name="system_setting">系统设置</string>
    <string name="userCenter">用户信息</string>
    <string name="inspect_title">主界面</string>
    <string name="setting_title">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnShowBeacon">显示Beacon</string>
    <string name="btnUpdateContent">更新数据</string>
    <string name="btnUpdatding">正在更新数据</string>
    <string name="btnStartContent">开始巡检</string>
    <string name="btnStarting">结束巡检</string>
    <string name="btnStartUpload">上传报告</string>
    <string name="btnUploadding">正在上传数据</string>
    <string name="ble_not_supported">不支持BLE设备</string>
    <string name="uploadIndoorUrl1">http://115.28.164.238/androidServer/location/uploadIndoorRecord</string>
    <string name="hostUrl">http://115.28.164.238/androidServer</string>
    <string name="uploadIndoorUrl">http://115.28.164.238/androidServer/location/uploadIndoorRecord</string>
    <string name="uploadForSignalHeatMap">http://115.28.164.238/androidServer/location/uploadForSignalHeatmap</string>
    <string name="uploadIndoorSignalUrl">http://115.28.164.238/androidServer/location/uploadIndoorSignalRecord</string>
    <string name="uploadCalPositionUrl">http://115.28.164.238/androidServer/location/uploadCalPositionRecord</string>
    <string name="uploadNeighborUrl">http://115.28.164.238/androidServer/location/uploadNeighbors</string>

    <string name="updateBuildingParaUrl">http://115.28.164.238/androidServer/location/updateBuildingPara</string>
    <string name="userName">用户名</string>
    <string name="userNameHint">请输入用户名</string>
    <string name="userNameWarn">用户名错误，请重新输入</string>
    <string name="passWord">密码</string>
    <string name="passWordHint">请输入6-16个字符</string>
    <string name="loginPassWordHint">请输入密码</string>
    <string name="passWordAgain">确认密码</string>
    <string name="passWordHintAgain">请确认密码</string>
    <string name="companyName">公司名称</string>
    <string name="companyNameHint">请输入所在公司名称</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="logout">用户注销</string>
    <string name="serverurl">http://115.28.164.238/androidServer/location/uploadIndoorRecord</string>
    <string name="trainData">训练数据</string>
    <string name="indoorLocation">室内定位</string>
    <string name="aboutSystem">关于系统</string>
    <string name="traindataGet">记录</string>
    <string name="traindataUpload">上传</string>
    <string name="traindataNearest">最近的蓝牙设备</string>
    <string name="traindataMarker">地理位置标签</string>
    <string name="traindataMarkerHint">请输入</string>
    <string name="traindataPositionX">位置坐标X</string>
    <string name="traindataPositionY">位置坐标Y</string>
    <string name="start_location_engine">Start Location</string>
    <string name="stop_location_engine">Stop Location</string>
    <string name="testmap">地图测试</string>
    <string name="title_activity_settings">系统设置</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">用户登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
</resources>
