<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_backward"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="38dp"
            android:text="@string/userName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loginUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/loginName"
            android:layout_alignBottom="@id/loginName"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/loginName"
            android:ems="10"
            android:hint="@string/userNameHint">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/loginPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/loginName"
            android:layout_below="@+id/loginName"
            android:layout_marginTop="30dp"
            android:text="@string/passWord"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/showLoginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnlogin"
            android:layout_marginTop="30dp"
            android:text=""
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loginPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/loginPass"
            android:layout_alignBottom="@+id/loginPass"
            android:layout_alignLeft="@+id/loginUserName"
            android:layout_alignRight="@+id/loginUserName"
            android:ems="10"
            android:hint="@string/loginPassWordHint"
            android:inputType="textPassword"
            android:padding="8dip" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/loginName"
            android:layout_alignRight="@+id/loginPassWord"
            android:layout_below="@+id/loginPassWord"
            android:layout_marginTop="50dp"
            android:text="@string/login" />

    </RelativeLayout>


</LinearLayout>